--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-12">
-			<input type="text" placeholder="Search a Movie...">
+			<input id="user-search" type="text" placeholder="Search a Movie...">
 			<button id="submit-btn">Search</button>
 		</div>
 	</div>
