--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
 <!-- Latest compiled and minified CSS & JS -->
 <script src="https://code.jquery.com/jquery.js"></script>
-<script type="text/javascript" src="assets/js/app.js"></script>
+<script type="text/javascript" src="assets/js/omdb.js"></script>
+<script type="text/javascript" src="assets/js/guidebox.js"></script>
 </body>
 </html>
