--- a/index.html
+++ b/index.html
@@ -19,44 +19,15 @@
 			<button id="submit-btn">Search</button>
 		</div>
 	</div>
-	<div id="results">
-		
-		<!-- result component -->
-		<div class="row result">
-			<!-- movie image -->
-			<div class="col-lg-3 movie-poster">
-				<img src="http://static.rogerebert.com/uploads/movie/movie_poster/nightcrawler-2014/large_ciARJx8fJqum8uh6gLePaNoyYNY.jpg" alt="">
-			</div>
-			<!-- movie description & ratings -->
-			<div class="col-lg-6 movie-description">
-				<h2>Description	</h2>
-				<p>When Louis Bloom, a driven man desperate for work, muscles into the world of L.A. crime journalism, he blurs the line between observer and participant to become the star of his own story. Aiding him in his effort is Nina, a TV-news veteran.</p>
-				<h2>Ratings</h2>			
-				<ul class="reviews">
-					<li>Metacritic</li>
-					<li>Rotten Tomatoes</li>
-				</ul>
-			</div>
-			<!-- streaming links -->
-			<div class="col-lg-3 streaming-links">
-				<h2>Streaming On</h2>
-				<!-- displays available streaming sources, or none if there aren't any available -->
-				<ul>
-					<li>Netflix</li>
-					<li>HBO GO</li>
-					<li>Amazon Prime</li>
-				</ul>
-			</div>
-		</div>
-		<!-- end result component -->
-	
+	<div id="results">		
 	</div>
 	
 </div>
 
 <!-- Latest compiled and minified CSS & JS -->
 <script src="https://code.jquery.com/jquery.js"></script>
-<script type="text/javascript" src="assets/js/omdb.js"></script>
+<!-- <script type="text/javascript" src="assets/js/omdb.js"></script> -->
 <script type="text/javascript" src="assets/js/guidebox.js"></script>
+<script type="text/javascript" src="assets/js/app.js"></script>
 </body>
 </html>
