added firebase js files

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 </div>
 
 <!-- Latest compiled and minified CSS & JS -->
+<script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
 <script src="https://code.jquery.com/jquery.js"></script>
 <!-- <script type="text/javascript" src="assets/js/omdb.js"></script> -->
 <script type="text/javascript" src="assets/js/guidebox.js"></script>
 <script type="text/javascript" src="assets/js/app.js"></script>
+<script type="text/javascript" src="assets/js/top-searched-movies.js"></script>
 </body>
 </html>
