--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title></title>
 	<!-- Bootstrap -->
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,800" rel="stylesheet">
+	<link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.css">
+	<script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -27,10 +29,13 @@
 		</div>
 	</div>
 </div>
-<div class="hide container">
-	<div id="results">		
+<div class="container">
+	<div id="results" class="hide">		
+	</div>
+	<div id="top-results">		
 	</div>
 </div>
+
 	
 
 <!-- Latest compiled and minified CSS & JS -->
@@ -40,5 +45,6 @@
 <script type="text/javascript" src="assets/js/guidebox.js"></script>
 <script type="text/javascript" src="assets/js/app.js"></script>
 <script type="text/javascript" src="assets/js/top-searched-movies.js"></script>
+<script type="text/javascript" src="assets/js/flickity.js"></script>
 </body>
 </html>
