added newsletter form

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
 			<img src="assets/images/loading.gif" alt="loading">
 		</div>
 	</div>
+	<div id="signup" class="row">
+		<div class="col-lg-12">
+			<h2>Spend time watching movies, <br />
+			not looking for movies to watch.</h2>
+			<p>Get the most popular streaming movies delivered to your inbox before movie night.</p>
+			<form>				
+				<input id="user-email" type="email" placeholder="Email address"><br />
+				<button id="newsletter-signup" type="submit">Get the Weekly Newsletter</button>
+			</form>
+		</div>
+	</div>
 </div>
 <div class="container">
 	<div id="results" class="hide">		
