--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,800" rel="stylesheet">
 	<link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.css">
 	<script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -13,12 +14,12 @@
 <div id="search-form" class="container-fluid">
 	<div id="header" class="row">
 		<div class="col-lg-12">
-			<h1>SearchStream</h1>
+			<h1><i class="fa fa-film" aria-hidden="true"></i> SearchStream</h1>
 		</div>
 	</div>
 	<div id="search-bar" class="row">
 		<div class="col-lg-12">
-			<input id="user-search" type="text" placeholder="Search a movie to see if it's streaming...">
+			<input id="user-search" type="text" placeholder="Search a movie...">
 			<br />
 			<button id="submit-btn">Search</button>
 		</div>
