--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
 			<input id="user-search" type="text" placeholder="Search a movie...">
 			<br />
 			<button id="submit-btn">Search</button>
-		</div>
-	</div>
-	<div id="loading" class="row hide">
-		<div class="col-lg-12">
-			<img src="assets/images/loading.gif" alt="loading">
+			<span class="hide" id="loading"><img src="assets/images/loading.gif" alt="loading"></span>
 		</div>
 	</div>
 	<div id="signup" class="row">
