moved newsletter signup to bottom of page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 			<span class="hide" id="loading"><img src="assets/images/loading.gif" alt="loading"></span>
 		</div>
 	</div>
+</div>
+<div class="container">
+	<div id="results" class="hide">		
+	</div>
+	<div id="top-results">		
+	</div>
+</div>
+<div id="newsletter" class="container-fluid">
 	<div id="signup" class="row">
 		<div class="col-lg-12">
 			<h2>Spend time watching movies, <br />
@@ -35,12 +43,6 @@
 				<button id="newsletter-signup" type="submit">Get the Weekly Newsletter</button>
 			</form>
 		</div>
-	</div>
-</div>
-<div class="container">
-	<div id="results" class="hide">		
-	</div>
-	<div id="top-results">		
 	</div>
 </div>
 
