Carousel in html, made changes to loop in flickity.js

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="container">
 	<div id="results" class="hide">		
 	</div>
-	<div id="top-results">		
+	<div class = "carousel" data-flickity>
 	</div>
 </div>
 <div id="newsletter" class="container-fluid">
@@ -51,11 +51,11 @@
 <!-- Latest compiled and minified CSS & JS -->
 <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
 <script src="https://code.jquery.com/jquery.js"></script>
-<link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.min.css">
+<!-- <link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.min.css"> -->
 <link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.css">
-<script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
+<!-- <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script> -->
 <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.js"></script>
-<!-- <script type="text/javascript" src="assets/js/omdb.js"></script> -->
+<script type="text/javascript" src="assets/js/omdb.js"></script>
 <script type="text/javascript" src="assets/js/guidebox.js"></script>
 <script type="text/javascript" src="assets/js/app.js"></script>
 <script type="text/javascript" src="assets/js/top-searched-movies.js"></script>
