--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
 <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.js"></script>
 <script type="text/javascript" src="assets/js/guidebox.js"></script>
-<script type="text/javascript" src="assets/js/omdb.js"></script>
+<!-- <script type="text/javascript" src="assets/js/omdb.js"></script> -->
 <script type="text/javascript" src="assets/js/top-searched-movies.js"></script>
 <script type="text/javascript" src="assets/js/flickity.js"></script>
 <script type="text/javascript" src="assets/js/app.js"></script>
